--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/slnx.sqlite-journal
+/.vs/socket-chat/v16
+/.vs
